--- a/LearningCenter/LearningCenter.Domain/LearningCenter.Domain.csproj
+++ b/LearningCenter/LearningCenter.Domain/LearningCenter.Domain.csproj
@@ -6,4 +6,19 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+    <ItemGroup Condition="'$(Configuration)' == 'Release'">
+	    <Compile Remove="**\*.Specs.cs" />
+	    <Compile Remove="**\*.Fakes.cs" />
+    </ItemGroup>
+	
+  <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="8.0.1" />
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
+    <PackageReference Include="xunit" Version="2.9.3" />
+    <PackageReference Include="xunit.runner.visualstudio" Version="3.0.2">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+  </ItemGroup>
+
 </Project>
