--- a/LearningCenter/LearningCenter/appsettings.json
+++ b/LearningCenter/LearningCenter/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Data Source=mimo.db"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
