--- a/LearningCenter/LearningCenter.Domain/LearningCenter.Domain.csproj
+++ b/LearningCenter/LearningCenter.Domain/LearningCenter.Domain.csproj
@@ -13,6 +13,7 @@
 	
   <ItemGroup>
     <PackageReference Include="FluentAssertions" Version="8.0.1" />
+    <PackageReference Include="MediatR" Version="12.4.1" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="9.0.2" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.13.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
